@@ -12,20 +12,20 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>5.10.2</junit.version>
+    <javafx.version>17.0.6</javafx.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>17.0.6</version>
+      <version>${javafx.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>17.0.6</version>
+      <version>${javafx.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -43,37 +43,9 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.theoryinpractise</groupId>
-        <artifactId>googleformatter-maven-plugin</artifactId>
-        <version>1.7.3</version>
-        <configuration>
-          <style>GOOGLE</style>
-          <formatMain>true</formatMain>
-          <formatTest>true</formatTest>
-          <includeStale>false</includeStale>
-          <jvmArgs>
-            <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</jvmArg>
-          </jvmArgs>
-        </configuration>
-        <executions>
-          <execution>
-            <id>reformat-sources</id>
-            <phase>validate</phase>
-            <goals>
-              <goal>format</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.13.0</version>
+        <version>3.8.1</version>
         <configuration>
           <source>17</source>
           <target>17</target>
@@ -87,45 +59,8 @@
           <execution>
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.test_repo/com.example.test_repo.HelloApplication</mainClass>
-              <launcher>app</launcher>
-              <jlinkZipName>app</jlinkZipName>
-              <jlinkImageName>app</jlinkImageName>
-              <noManPages>true</noManPages>
-              <stripDebug>true</stripDebug>
-              <noHeaderFiles>true</noHeaderFiles>
+              <mainClass>com.example.test_repo.HelloApplication</mainClass>
             </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.google.googlejavaformat</groupId>
-        <artifactId>google-java-format-maven-plugin</artifactId>
-        <version>1.15.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>format</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>3.2.2</version>
-        <configuration>
-          <configLocation>google_checks.xml</configLocation>
-          <encoding>UTF-8</encoding>
-          <consoleOutput>true</consoleOutput>
-          <failsOnError>true</failsOnError>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>validate</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
           </execution>
         </executions>
       </plugin>
